--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,17 @@
-<html>
- <body>
-  <h1>Hi, Wake up Moises</h1>
-  <h2>Estamos en la super ch14</h2>
- </body>
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Hola, escribiendo desde VSC</h1>
+    <h2>Active el autoguardado</h2>
+    <h2>hoy estamos a velocidad .5x</h2>
+    <h3>Pero mañana regresaremos a 1.5x de velocidad</h3>
+    <h3>Ya merito terminamos el día jueves</h3>
+    <h3>Aunque no sé cómo venir de Belinda mañana</h3>
+</body>
+</html>
