Se realiza el primer cambio

--- a/saludo/index.html
+++ b/saludo/index.html
@@ -10,7 +10,10 @@
 <body>
     <h1>Bootcamp Generation</h1>
     <h2>Jorge Montalvo</h2>
-    <h3>Ganando como siempre</h3>
+    <h2>Ganando como siempre</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur maxime, architecto quaerat non, nisi atque perspiciatis, magni doloribus dignissimos dolores quae repudiandae animi adipisci quidem quia quibusdam iste nemo esse?</p>
+
+
     <script src="script.js"></script>
 </body>
 </html>
