factor: uso de inner.Text y comentarios

--- a/saludo/index.html
+++ b/saludo/index.html
@@ -12,8 +12,8 @@
     <h2>Jorge Montalvo</h2>
     <h2>Ganando como siempre</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur maxime, architecto quaerat non, nisi atque perspiciatis, magni doloribus dignissimos dolores quae repudiandae animi adipisci quidem quia quibusdam iste nemo esse?</p>
-
-
+<!-- En esta parte relaciono mi html con script -->
+<!-- puedo escribir mis comentarios seleccionando la frase ALT+SHIFT+A -->
     <script src="script.js"></script>
 </body>
 </html>
